--- a/sobrenos.html
+++ b/sobrenos.html
@@ -45,7 +45,7 @@
           <p>Arthur Moreira</p>
         </div>
         <div class="arrobas">
-          <p>@ysl.leo</p>
+          <a>@ysl.leo</a>
           <p>@kauemm09</p>
           <p>@theuzinx_fx</p>
           <p>@arthurmsz_</p>
