--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                 <li><a href="./sobrenos.html">Sobre nós</a></li>
             </ul>
         </nav>
+
+        <div class="user-icon-box">
+          <svg viewBox="0 0 24 24" class="user-icon">
+              <circle cx="12" cy="8" r="4" stroke="white" stroke-width="2" fill="none"/>
+              <path d="M4 20c0-4 4-6 8-6s8 2 8 6" stroke="white" stroke-width="2" fill="none"/>
+          </svg>
+      </div>
+
     </header>
 
   
