--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <circle cx="12" cy="8" r="4" stroke="white" stroke-width="2" fill="none"/>
               <path d="M4 20c0-4 4-6 8-6s8 2 8 6" stroke="white" stroke-width="2" fill="none"/>
           </svg>
+          <a href="./login.html"></a>
       </div>
 
     </header>
