--- a/login.html
+++ b/login.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Login</title>
-    <link rel="stylesheet" href="./CSS/login.css">
+    <title>MALK - Relações entre os Animais</title>
+    <link rel="stylesheet" href="./CSS/style.css">
+    <script src="main.js"> </script>
+    <link rel="logo" href="./Imagens/logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Italiana&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="navbar">
-    <div class="logo">🌳</div>
-    <div class="menu">
-        <a href="#">Relações</a>
-        <a href="#">Jogo</a>
-        <a href="#">Recomendações</a>
-        <a href="#">Sobre nós</a>
-    </div>
-    <div class="profile">👤</div>
-</div>
+    <header>
+        <div> <a class="logo" href="index.html">MALK</a></div>
+        <nav>
+            <ul>
+                <li><a href="./relacoes.html">Relações</a></li>
+                <li><a href="./jogo.html">Jogo</a></li>
+                <li><a href="./recomendacoes.html">Recomendações</a></li>
+                <li><a href="./sobrenos.html">Sobre nós</a></li>
+            </ul>
+        </nav>
+
+        <div class="user-icon-box">
+          <svg viewBox="0 0 24 24" class="user-icon">
+              <circle cx="12" cy="8" r="4" stroke="white" stroke-width="2" fill="none"/>
+              <path d="M4 20c0-4 4-6 8-6s8 2 8 6" stroke="white" stroke-width="2" fill="none"/>
+          </svg>
+          <a href="./login.html"></a>
+      </div>
+
 
 <div class="login-box">
     <div class="profile-icon"></div>
