--- a/parabens.html
+++ b/parabens.html
@@ -16,6 +16,7 @@
   <div class="buttons">
     <a href="./index.html"><button class="botao">Voltar ao início</button></a>
     <a href="./jogar.html"><button class="botao">Jogar novamente</button></a>
+    <a href="./ranking.html"><button class="botao">Ver ranking</button></a>
   </div>
 
   <p>Até a próxima missão ecológica!</p>
