--- a/competicao.html
+++ b/competicao.html
@@ -17,6 +17,11 @@
         <li><a href="./jogo.html">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
         <li><a href="./sobrenos.html">Sobre nós</a></li>
+        <li><a href="./login.html"><div class="user-icon-box">
+          <svg viewBox="0 0 24 24" class="user-icon">
+              <circle cx="12" cy="8" r="4" stroke="white" stroke-width="2" fill="none"/>
+              <path d="M4 20c0-4 4-6 8-6s8 2 8 6" stroke="white" stroke-width="2" fill="none"/>
+          </svg></a></li>
       </ul>
     </nav>
   </div>
