--- a/recomendacoes.html
+++ b/recomendacoes.html
@@ -32,6 +32,11 @@
                 <li>
                     <a href="./sobrenos.html">Sobre nós</a>
                 </li>
+                <li><a href="./login.html"><div class="user-icon-box">
+                    <svg viewBox="0 0 24 24" class="user-icon">
+                        <circle cx="12" cy="8" r="4" stroke="white" stroke-width="2" fill="none"/>
+                        <path d="M4 20c0-4 4-6 8-6s8 2 8 6" stroke="white" stroke-width="2" fill="none"/>
+                    </svg></a></li>
             </ul>
         </nav>
     </div>
