--- a/criarconta.html
+++ b/criarconta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MALK - Relações entre os Animais</title>
+    <title>MALK - Criar onta</title>
     <link rel="stylesheet" href="./CSS/criarconta.css">
     <script src="main.js"> </script>
     <link rel="logo" href="./Imagens/logo.png">
