--- a/criarconta.html
+++ b/criarconta.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MALK - Criar onta</title>
     <link rel="stylesheet" href="./CSS/criarconta.css">
-    <script src="main.js"> </script>
+    <script src="./js/criarconta.js"> </script>
     <link rel="logo" href="./Imagens/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
