--- a/jogar.html
+++ b/jogar.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎮</title>
     <link rel="stylesheet" href="./CSS/jogar.css">
+    <script src="./js/jogar.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Comfortaa:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
