--- a/login.html
+++ b/login.html
@@ -9,30 +9,31 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./CSS/login.css">
+<script src="./js/login.js"></script>
 
 </head>
 <body>
 
 
-  <header>
-    <div class="cabeçalho">
-        <nav>
-          <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
-          <ul>
-            <li><a href="./relacoes.html" class="active">Relações</a></li>
-            <li><a href="./jogo.html">Jogo</a></li>
-            <li><a href="./recomendacoes.html">Recomendações</a></li>
-            <li><a href="./sobrenos.html">Sobre nós</a></li>
-            <li><a href="./login.html"> <div class="user-icon-box">
-              <svg viewBox="0 0 24 24" class="user-icon">
-                  <circle cx="12" cy="8" r="4" stroke="white" stroke-width="2" fill="none"/>
-                  <path d="M4 20c0-4 4-6 8-6s8 2 8 6" stroke="white" stroke-width="2" fill="none"/>
-              </svg></a></li>
-          </ul>
-        </nav>
-    </div>
+    <header>
+        <div class="cabeçalho">
+            <nav>
+              <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
+              <ul>
+                <li><a href="./relacoes.html" class="active">Relações</a></li>
+                <li><a href="./jogo.html">Jogo</a></li>
+                <li><a href="./recomendacoes.html">Recomendações</a></li>
+                <li><a href="./sobrenos.html">Sobre nós</a></li>
+                <li><a href="./login.html"> <div class="user-icon-box">
+                  <svg viewBox="0 0 24 24" class="user-icon">
+                      <circle cx="12" cy="8" r="4" stroke="white" stroke-width="2" fill="none"/>
+                      <path d="M4 20c0-4 4-6 8-6s8 2 8 6" stroke="white" stroke-width="2" fill="none"/>
+                  </svg></a></li>
+              </ul>
+            </nav>
+        </div>
 
-</header>
+    </header>
 
 <div class="container">
     <div class="avatar">
@@ -59,7 +60,7 @@
     </div>
 
 
-</header>
+
 
 </body>
 </html>
